fixed menu wrapping on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -33,6 +33,10 @@ a {
   padding-bottom: 3rem;
 }
 
+.navbar > .container {
+  padding: 0;
+}
+
 .navbar-logo {
   display: none;
   float: left;
